# src/main/java/com/dsm/oshu/auth/presentation/dto/GoogleCodeExchangeRequest.java
@@ -2,5 +2,5 @@ package com.dsm.oshu.auth.presentation.dto;
 
 import jakarta.validation.constraints.NotBlank;
 
-public record GoogleLoginRequest(@NotBlank String idToken) {
+public record GoogleCodeExchangeRequest(@NotBlank String code) {
 }
